--- a/style.css
+++ b/style.css
@@ -107,3 +107,50 @@ section {
     display: flex;
     justify-content: space-evenly;
 }
+
+.sami{
+    background: white;
+    width: 500px;
+    margin: 55px auto;
+    padding: 20px;
+    border: 5px solid green;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 1.5);
+}
+
+    .sami h2 {
+        font-size: 25px;
+        text-align: center;
+        padding: 24px;
+    }
+
+.input-name {
+    width: 90%;
+    margin: 20px auto;
+    position: relative;
+}
+
+.name {
+    width: 45%;
+    padding: 8px 0px 8px 40px;
+}
+
+.text-name {
+    width:90%;
+    margin-right:20px;
+    padding: 8px 0px 8px 40px;
+}
+
+.new {
+    padding: 8px 8px;
+}
+
+.btn {
+    width: 100%;
+    padding: 8px 0px 8px 0px;
+    background: seagreen;
+    color: black;
+}
+
+    .btn:hover {
+        background: lightgrey;
+    }
